--- a/navbar.css
+++ b/navbar.css
@@ -26,6 +26,7 @@
     font-size: 2rem;
     color: #000;
     font-weight: 600;
+    text-decoration: none;
 }
 
 .navbar a{
@@ -34,6 +35,7 @@
     font-weight: 500;
     margin-left: 3.5rem;
     transition: .3s;
+    text-decoration: none;
 }
 
 .navbar a:hover,
